bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : elementos

   2  elementos : elemento
   3            | elementos elemento

   4  elemento : funcion
   5           | struct
   6           | atributo

   7  funcion : "IDENT" '(' parametros ')' ':' tipo '{' sentencias '}'
   8          | "IDENT" '(' parametros ')' '{' sentencias '}'

   9  parametros : parametro
  10             |

  11  parametro : "IDENT" ':' tipoPrimitivo
  12            | parametro ',' parametro

  13  tipo : tipoPrimitivo
  14       | "IDENT"

  15  tipoPrimitivo : "INT"
  16                | "REAL"
  17                | "CHAR"

  18  array : dimensiones tipo

  19  dimensiones : dimension
  20              | dimensiones dimension

  21  dimension : '[' "LITERALINT" ']'

  22  struct : "STRUCT" "IDENT" '{' definiciones '}' ';'

  23  atributo : "VAR" definicion

  24  definiciones : definicion
  25               | definiciones definicion

  26  definicion : "IDENT" ':' tipo ';'
  27             | "IDENT" ':' array ';'

  28  sentencias : sentencias sentencia
  29             |

  30  sentencia : "VAR" definicion
  31            | "READ" "IDENT" ';'
  32            | "READ" "IDENT" accesos ';'
  33            | "PRINT" expresion ';'
  34            | "WHILE" '(' expresion ')' '{' sentencias '}'
  35            | "IF" '(' expresion ')' '{' sentencias '}'
  36            | "IF" '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'
  37            | "IDENT" '=' expresion ';'
  38            | "IDENT" accesos '=' expresion ';'
  39            | "IDENT" '=' "LITERALCHAR" ';'
  40            | "CAST" '<' tipoPrimitivo '>' '(' expresion ')'
  41            | "RETURN" expresion ';'
  42            | "RETURN" ';'
  43            | invocacionMetodo ';'

  44  expresion : "LITERALINT"
  45            | "LITERALREAL"
  46            | "IDENT"
  47            | expresion '+' expresion
  48            | expresion '-' expresion
  49            | expresion '/' expresion
  50            | expresion '*' expresion
  51            | expresion '<' expresion
  52            | expresion '>' expresion
  53            | expresion '<' '=' expresion
  54            | expresion '>' '=' expresion
  55            | expresion '=' '=' expresion
  56            | expresion '=' expresion
  57            | expresion '!' '=' expresion
  58            | expresion '&' '&' expresion
  59            | expresion '|' '|' expresion
  60            | '!' expresion
  61            | '(' expresion ')'
  62            | "IDENT" accesos
  63            | invocacionMetodo

  64  accesos : acceso
  65          | accesos acceso

  66  acceso : '.' "IDENT"
  67         | '[' expresion ']'

  68  invocacionMetodo : "IDENT" '(' valores ')'

  69  valores : valor
  70          |

  71  valor : expresion
  72        | "CAST" '<' tipoPrimitivo '>' '(' expresion ')'
  73        | valor ',' valor

state 0
	$accept : . programa $end  (0)

	"IDENT"  shift 1
	"STRUCT"  shift 2
	"VAR"  shift 3
	.  error

	programa  goto 4
	elementos  goto 5
	elemento  goto 6
	funcion  goto 7
	struct  goto 8
	atributo  goto 9


state 1
	funcion : "IDENT" . '(' parametros ')' ':' tipo '{' sentencias '}'  (7)
	funcion : "IDENT" . '(' parametros ')' '{' sentencias '}'  (8)

	'('  shift 10
	.  error


state 2
	struct : "STRUCT" . "IDENT" '{' definiciones '}' ';'  (22)

	"IDENT"  shift 11
	.  error


state 3
	atributo : "VAR" . definicion  (23)

	"IDENT"  shift 12
	.  error

	definicion  goto 13


state 4
	$accept : programa . $end  (0)

	$end  accept


state 5
	programa : elementos .  (1)
	elementos : elementos . elemento  (3)

	"IDENT"  shift 1
	"STRUCT"  shift 2
	"VAR"  shift 3
	$end  reduce 1

	elemento  goto 14
	funcion  goto 7
	struct  goto 8
	atributo  goto 9


state 6
	elementos : elemento .  (2)

	.  reduce 2


state 7
	elemento : funcion .  (4)

	.  reduce 4


state 8
	elemento : struct .  (5)

	.  reduce 5


state 9
	elemento : atributo .  (6)

	.  reduce 6


state 10
	funcion : "IDENT" '(' . parametros ')' ':' tipo '{' sentencias '}'  (7)
	funcion : "IDENT" '(' . parametros ')' '{' sentencias '}'  (8)
	parametros : .  (10)

	"IDENT"  shift 15
	')'  reduce 10

	parametros  goto 16
	parametro  goto 17


state 11
	struct : "STRUCT" "IDENT" . '{' definiciones '}' ';'  (22)

	'{'  shift 18
	.  error


state 12
	definicion : "IDENT" . ':' tipo ';'  (26)
	definicion : "IDENT" . ':' array ';'  (27)

	':'  shift 19
	.  error


state 13
	atributo : "VAR" definicion .  (23)

	.  reduce 23


state 14
	elementos : elementos elemento .  (3)

	.  reduce 3


state 15
	parametro : "IDENT" . ':' tipoPrimitivo  (11)

	':'  shift 20
	.  error


state 16
	funcion : "IDENT" '(' parametros . ')' ':' tipo '{' sentencias '}'  (7)
	funcion : "IDENT" '(' parametros . ')' '{' sentencias '}'  (8)

	')'  shift 21
	.  error


state 17
	parametros : parametro .  (9)
	parametro : parametro . ',' parametro  (12)

	','  shift 22
	')'  reduce 9


state 18
	struct : "STRUCT" "IDENT" '{' . definiciones '}' ';'  (22)

	"IDENT"  shift 12
	.  error

	definiciones  goto 23
	definicion  goto 24


state 19
	definicion : "IDENT" ':' . tipo ';'  (26)
	definicion : "IDENT" ':' . array ';'  (27)

	"IDENT"  shift 25
	"INT"  shift 26
	"REAL"  shift 27
	"CHAR"  shift 28
	'['  shift 29
	.  error

	tipo  goto 30
	tipoPrimitivo  goto 31
	array  goto 32
	dimensiones  goto 33
	dimension  goto 34


state 20
	parametro : "IDENT" ':' . tipoPrimitivo  (11)

	"INT"  shift 26
	"REAL"  shift 27
	"CHAR"  shift 28
	.  error

	tipoPrimitivo  goto 35


state 21
	funcion : "IDENT" '(' parametros ')' . ':' tipo '{' sentencias '}'  (7)
	funcion : "IDENT" '(' parametros ')' . '{' sentencias '}'  (8)

	':'  shift 36
	'{'  shift 37
	.  error


state 22
	parametro : parametro ',' . parametro  (12)

	"IDENT"  shift 15
	.  error

	parametro  goto 38


state 23
	struct : "STRUCT" "IDENT" '{' definiciones . '}' ';'  (22)
	definiciones : definiciones . definicion  (25)

	"IDENT"  shift 12
	'}'  shift 39
	.  error

	definicion  goto 40


state 24
	definiciones : definicion .  (24)

	.  reduce 24


state 25
	tipo : "IDENT" .  (14)

	.  reduce 14


state 26
	tipoPrimitivo : "INT" .  (15)

	.  reduce 15


state 27
	tipoPrimitivo : "REAL" .  (16)

	.  reduce 16


state 28
	tipoPrimitivo : "CHAR" .  (17)

	.  reduce 17


state 29
	dimension : '[' . "LITERALINT" ']'  (21)

	"LITERALINT"  shift 41
	.  error


state 30
	definicion : "IDENT" ':' tipo . ';'  (26)

	';'  shift 42
	.  error


state 31
	tipo : tipoPrimitivo .  (13)

	.  reduce 13


state 32
	definicion : "IDENT" ':' array . ';'  (27)

	';'  shift 43
	.  error


state 33
	array : dimensiones . tipo  (18)
	dimensiones : dimensiones . dimension  (20)

	"IDENT"  shift 25
	"INT"  shift 26
	"REAL"  shift 27
	"CHAR"  shift 28
	'['  shift 29
	.  error

	tipo  goto 44
	tipoPrimitivo  goto 31
	dimension  goto 45


state 34
	dimensiones : dimension .  (19)

	.  reduce 19


state 35
	parametro : "IDENT" ':' tipoPrimitivo .  (11)

	.  reduce 11


state 36
	funcion : "IDENT" '(' parametros ')' ':' . tipo '{' sentencias '}'  (7)

	"IDENT"  shift 25
	"INT"  shift 26
	"REAL"  shift 27
	"CHAR"  shift 28
	.  error

	tipo  goto 46
	tipoPrimitivo  goto 31


state 37
	funcion : "IDENT" '(' parametros ')' '{' . sentencias '}'  (8)
	sentencias : .  (29)

	.  reduce 29

	sentencias  goto 47


state 38
	parametro : parametro . ',' parametro  (12)
	parametro : parametro ',' parametro .  (12)

	.  reduce 12


state 39
	struct : "STRUCT" "IDENT" '{' definiciones '}' . ';'  (22)

	';'  shift 48
	.  error


state 40
	definiciones : definiciones definicion .  (25)

	.  reduce 25


state 41
	dimension : '[' "LITERALINT" . ']'  (21)

	']'  shift 49
	.  error


state 42
	definicion : "IDENT" ':' tipo ';' .  (26)

	.  reduce 26


state 43
	definicion : "IDENT" ':' array ';' .  (27)

	.  reduce 27


state 44
	array : dimensiones tipo .  (18)

	.  reduce 18


state 45
	dimensiones : dimensiones dimension .  (20)

	.  reduce 20


state 46
	funcion : "IDENT" '(' parametros ')' ':' tipo . '{' sentencias '}'  (7)

	'{'  shift 50
	.  error


state 47
	funcion : "IDENT" '(' parametros ')' '{' sentencias . '}'  (8)
	sentencias : sentencias . sentencia  (28)

	"IDENT"  shift 51
	'}'  shift 52
	"VAR"  shift 53
	"READ"  shift 54
	"PRINT"  shift 55
	"WHILE"  shift 56
	"IF"  shift 57
	"CAST"  shift 58
	"RETURN"  shift 59
	.  error

	sentencia  goto 60
	invocacionMetodo  goto 61


state 48
	struct : "STRUCT" "IDENT" '{' definiciones '}' ';' .  (22)

	.  reduce 22


state 49
	dimension : '[' "LITERALINT" ']' .  (21)

	.  reduce 21


state 50
	funcion : "IDENT" '(' parametros ')' ':' tipo '{' . sentencias '}'  (7)
	sentencias : .  (29)

	.  reduce 29

	sentencias  goto 62


state 51
	sentencia : "IDENT" . '=' expresion ';'  (37)
	sentencia : "IDENT" . accesos '=' expresion ';'  (38)
	sentencia : "IDENT" . '=' "LITERALCHAR" ';'  (39)
	invocacionMetodo : "IDENT" . '(' valores ')'  (68)

	'='  shift 63
	'('  shift 64
	'['  shift 65
	'.'  shift 66
	.  error

	accesos  goto 67
	acceso  goto 68


state 52
	funcion : "IDENT" '(' parametros ')' '{' sentencias '}' .  (8)

	.  reduce 8


state 53
	sentencia : "VAR" . definicion  (30)

	"IDENT"  shift 12
	.  error

	definicion  goto 69


state 54
	sentencia : "READ" . "IDENT" ';'  (31)
	sentencia : "READ" . "IDENT" accesos ';'  (32)

	"IDENT"  shift 70
	.  error


state 55
	sentencia : "PRINT" . expresion ';'  (33)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 76
	invocacionMetodo  goto 77


state 56
	sentencia : "WHILE" . '(' expresion ')' '{' sentencias '}'  (34)

	'('  shift 78
	.  error


state 57
	sentencia : "IF" . '(' expresion ')' '{' sentencias '}'  (35)
	sentencia : "IF" . '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (36)

	'('  shift 79
	.  error


state 58
	sentencia : "CAST" . '<' tipoPrimitivo '>' '(' expresion ')'  (40)

	'<'  shift 80
	.  error


state 59
	sentencia : "RETURN" . expresion ';'  (41)
	sentencia : "RETURN" . ';'  (42)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	';'  shift 81
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 82
	invocacionMetodo  goto 77


state 60
	sentencias : sentencias sentencia .  (28)

	.  reduce 28


state 61
	sentencia : invocacionMetodo . ';'  (43)

	';'  shift 83
	.  error


state 62
	funcion : "IDENT" '(' parametros ')' ':' tipo '{' sentencias . '}'  (7)
	sentencias : sentencias . sentencia  (28)

	"IDENT"  shift 51
	'}'  shift 84
	"VAR"  shift 53
	"READ"  shift 54
	"PRINT"  shift 55
	"WHILE"  shift 56
	"IF"  shift 57
	"CAST"  shift 58
	"RETURN"  shift 59
	.  error

	sentencia  goto 60
	invocacionMetodo  goto 61


state 63
	sentencia : "IDENT" '=' . expresion ';'  (37)
	sentencia : "IDENT" '=' . "LITERALCHAR" ';'  (39)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALCHAR"  shift 85
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 86
	invocacionMetodo  goto 77


state 64
	invocacionMetodo : "IDENT" '(' . valores ')'  (68)
	valores : .  (70)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"CAST"  shift 87
	"LITERALREAL"  shift 75
	')'  reduce 70

	expresion  goto 88
	invocacionMetodo  goto 77
	valores  goto 89
	valor  goto 90


state 65
	acceso : '[' . expresion ']'  (67)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 91
	invocacionMetodo  goto 77


state 66
	acceso : '.' . "IDENT"  (66)

	"IDENT"  shift 92
	.  error


state 67
	sentencia : "IDENT" accesos . '=' expresion ';'  (38)
	accesos : accesos . acceso  (65)

	'='  shift 93
	'['  shift 65
	'.'  shift 66
	.  error

	acceso  goto 94


state 68
	accesos : acceso .  (64)

	.  reduce 64


state 69
	sentencia : "VAR" definicion .  (30)

	.  reduce 30


state 70
	sentencia : "READ" "IDENT" . ';'  (31)
	sentencia : "READ" "IDENT" . accesos ';'  (32)

	'['  shift 65
	';'  shift 95
	'.'  shift 66
	.  error

	accesos  goto 96
	acceso  goto 68


state 71
	expresion : '!' . expresion  (60)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 97
	invocacionMetodo  goto 77


state 72
	expresion : "IDENT" .  (46)
	expresion : "IDENT" . accesos  (62)
	invocacionMetodo : "IDENT" . '(' valores ')'  (68)

	'('  shift 64
	'['  shift 65
	'.'  shift 66
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	','  reduce 46
	'<'  reduce 46
	'>'  reduce 46
	'='  reduce 46
	'&'  reduce 46
	'|'  reduce 46
	'!'  reduce 46
	')'  reduce 46
	']'  reduce 46
	';'  reduce 46

	accesos  goto 98
	acceso  goto 68


state 73
	expresion : '(' . expresion ')'  (61)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 99
	invocacionMetodo  goto 77


state 74
	expresion : "LITERALINT" .  (44)

	.  reduce 44


state 75
	expresion : "LITERALREAL" .  (45)

	.  reduce 45


state 76
	sentencia : "PRINT" expresion . ';'  (33)
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'&'  shift 107
	'|'  shift 108
	'!'  shift 109
	';'  shift 110
	.  error


state 77
	expresion : invocacionMetodo .  (63)

	.  reduce 63


state 78
	sentencia : "WHILE" '(' . expresion ')' '{' sentencias '}'  (34)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 111
	invocacionMetodo  goto 77


state 79
	sentencia : "IF" '(' . expresion ')' '{' sentencias '}'  (35)
	sentencia : "IF" '(' . expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (36)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 112
	invocacionMetodo  goto 77


state 80
	sentencia : "CAST" '<' . tipoPrimitivo '>' '(' expresion ')'  (40)

	"INT"  shift 26
	"REAL"  shift 27
	"CHAR"  shift 28
	.  error

	tipoPrimitivo  goto 113


state 81
	sentencia : "RETURN" ';' .  (42)

	.  reduce 42


state 82
	sentencia : "RETURN" expresion . ';'  (41)
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'&'  shift 107
	'|'  shift 108
	'!'  shift 109
	';'  shift 114
	.  error


state 83
	sentencia : invocacionMetodo ';' .  (43)

	.  reduce 43


state 84
	funcion : "IDENT" '(' parametros ')' ':' tipo '{' sentencias '}' .  (7)

	.  reduce 7


state 85
	sentencia : "IDENT" '=' "LITERALCHAR" . ';'  (39)

	';'  shift 115
	.  error


state 86
	sentencia : "IDENT" '=' expresion . ';'  (37)
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'&'  shift 107
	'|'  shift 108
	'!'  shift 109
	';'  shift 116
	.  error


state 87
	valor : "CAST" . '<' tipoPrimitivo '>' '(' expresion ')'  (72)

	'<'  shift 117
	.  error


state 88
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)
	valor : expresion .  (71)

	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'&'  shift 107
	'|'  shift 108
	'!'  shift 109
	','  reduce 71
	')'  reduce 71


state 89
	invocacionMetodo : "IDENT" '(' valores . ')'  (68)

	')'  shift 118
	.  error


state 90
	valores : valor .  (69)
	valor : valor . ',' valor  (73)

	','  shift 119
	')'  reduce 69


state 91
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)
	acceso : '[' expresion . ']'  (67)

	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'&'  shift 107
	'|'  shift 108
	'!'  shift 109
	']'  shift 120
	.  error


state 92
	acceso : '.' "IDENT" .  (66)

	.  reduce 66


state 93
	sentencia : "IDENT" accesos '=' . expresion ';'  (38)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 121
	invocacionMetodo  goto 77


state 94
	accesos : accesos acceso .  (65)

	.  reduce 65


state 95
	sentencia : "READ" "IDENT" ';' .  (31)

	.  reduce 31


state 96
	sentencia : "READ" "IDENT" accesos . ';'  (32)
	accesos : accesos . acceso  (65)

	'['  shift 65
	';'  shift 122
	'.'  shift 66
	.  error

	acceso  goto 94


state 97
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)
	expresion : '!' expresion .  (60)

	.  reduce 60


state 98
	expresion : "IDENT" accesos .  (62)
	accesos : accesos . acceso  (65)

	'['  shift 65
	'.'  shift 66
	'+'  reduce 62
	'-'  reduce 62
	'*'  reduce 62
	'/'  reduce 62
	','  reduce 62
	'<'  reduce 62
	'>'  reduce 62
	'='  reduce 62
	'&'  reduce 62
	'|'  reduce 62
	'!'  reduce 62
	')'  reduce 62
	']'  reduce 62
	';'  reduce 62

	acceso  goto 94


state 99
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)
	expresion : '(' expresion . ')'  (61)

	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'&'  shift 107
	'|'  shift 108
	'!'  shift 109
	')'  shift 123
	.  error


state 100
	expresion : expresion '+' . expresion  (47)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 124
	invocacionMetodo  goto 77


state 101
	expresion : expresion '-' . expresion  (48)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 125
	invocacionMetodo  goto 77


state 102
	expresion : expresion '*' . expresion  (50)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 126
	invocacionMetodo  goto 77


state 103
	expresion : expresion '/' . expresion  (49)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 127
	invocacionMetodo  goto 77


state 104
	expresion : expresion '<' . expresion  (51)
	expresion : expresion '<' . '=' expresion  (53)

	'='  shift 128
	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 129
	invocacionMetodo  goto 77


state 105
	expresion : expresion '>' . expresion  (52)
	expresion : expresion '>' . '=' expresion  (54)

	'='  shift 130
	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 131
	invocacionMetodo  goto 77


state 106
	expresion : expresion '=' . '=' expresion  (55)
	expresion : expresion '=' . expresion  (56)

	'='  shift 132
	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 133
	invocacionMetodo  goto 77


state 107
	expresion : expresion '&' . '&' expresion  (58)

	'&'  shift 134
	.  error


state 108
	expresion : expresion '|' . '|' expresion  (59)

	'|'  shift 135
	.  error


state 109
	expresion : expresion '!' . '=' expresion  (57)

	'='  shift 136
	.  error


state 110
	sentencia : "PRINT" expresion ';' .  (33)

	.  reduce 33


state 111
	sentencia : "WHILE" '(' expresion . ')' '{' sentencias '}'  (34)
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'&'  shift 107
	'|'  shift 108
	'!'  shift 109
	')'  shift 137
	.  error


state 112
	sentencia : "IF" '(' expresion . ')' '{' sentencias '}'  (35)
	sentencia : "IF" '(' expresion . ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (36)
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'&'  shift 107
	'|'  shift 108
	'!'  shift 109
	')'  shift 138
	.  error


state 113
	sentencia : "CAST" '<' tipoPrimitivo . '>' '(' expresion ')'  (40)

	'>'  shift 139
	.  error


state 114
	sentencia : "RETURN" expresion ';' .  (41)

	.  reduce 41


state 115
	sentencia : "IDENT" '=' "LITERALCHAR" ';' .  (39)

	.  reduce 39


state 116
	sentencia : "IDENT" '=' expresion ';' .  (37)

	.  reduce 37


state 117
	valor : "CAST" '<' . tipoPrimitivo '>' '(' expresion ')'  (72)

	"INT"  shift 26
	"REAL"  shift 27
	"CHAR"  shift 28
	.  error

	tipoPrimitivo  goto 140


state 118
	invocacionMetodo : "IDENT" '(' valores ')' .  (68)

	.  reduce 68


state 119
	valor : valor ',' . valor  (73)

	'!'  shift 71
	"IDENT"  shift 72
	'('  shift 73
	"LITERALINT"  shift 74
	"CAST"  shift 87
	"LITERALREAL"  shift 75
	.  error

	expresion  goto 88
	invocacionMetodo  goto 77
	valor  goto 141


state 120
	acceso : '[' expresion ']' .  (67)

	.  reduce 67


state 121
	sentencia : "IDENT" accesos '=' expresion . ';'  (38)
	expresion : expresion . '+' expresion  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'+'  shift 100
	'-'  shift 101
	'*'  shift 102
	'/'  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'&'  shift 107
	'|'  shift 108
	'!'  shift 109
	';'  shift 142
	.  error


state 122
	sentencia : "READ" "IDENT" accesos ';' .  (32)

	.  reduce 32


state 123
	expresion : '(' expresion ')' .  (61)

	.  reduce 61


state 124
	expresion : expresion . '+' expresion  (47)
	expresion : expresion '+' expresion .  (47)
	expresion : expresion . '-' expresion  (48)
	expresion : expresion . '/' expresion  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '<' expresion  (51)
	expresion : expresion . '>' expresion  (52)
	expresion : expresion . '<' '=' expresion  (53)
	expresion : expresion . '>' '=' expresion  (54)
	expresion : expresion . '=' '=' expresion  (55)
	expresion : expresion . '=' expresion  (56)
	expresion : expresion . '!' '=' expresion  (57)
	expresion : expresion . '&' '&' expresion  (58)
	expresion : expresion . '|' '|' expresion  (59)

	'*'  shift 102
	'/'  shift 103
	'<'  shift 104
	'>'  shift 105
	'='  shift 106
	'&'  shift 107
	'|'  shift 108
	'!'  shift 109
	'+'  reduce 47
	'-'  reduce 47
	','  reduce 47
	')'  reduce 47
	']'  reduce 47
	';'  reduce 47

